lesson09_滑动门知识

--- a/表单_网易注册.html
+++ b/表单_网易注册.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <title>网易注册</title>
     <style>
-        body,p,h1,ul{margin:0; font-size:14px;font-family: verdana,sans-serif;}
+        body,p,h1,ul,form{margin:0; font-size:14px;font-family: verdana,sans-serif;}
         a{text-decoration:none;}
         img{border:none;}
-        form{margin: 0;}
-        input,h1,ul,li,.middle,dl,dd,dt,{margin: 0;padding: 0;}
-        select{margin: 0;}
-        select, input, label, button, button img, img {
+        input,h1,ul,li,.middle,dl,dd,dt,select{margin: 0;padding: 0;}
+        select, input, label, button img, img {
             vertical-align: middle;
         }
         input, img {
@@ -61,6 +59,7 @@
             text-align: start;
             background-color: white;
             cursor: auto;
+            vertical-align: middle;
         }
 
         .regForm{margin-left: 9px;}
@@ -96,7 +95,7 @@
         .switchvCode{left: 300px;top:65px;position: absolute;}
         .btnReg{width: 119px;height: 37px;font-size: 14px;background-position:0 -360px;line-height: 37px;
             color: #fff;text-align: center;font-weight: bold;display: inline-block;vertical-align:middle;
-            overflow: hidden;background: url("img/left_button.jpg") no-repeat}
+            overflow: hidden; background: url("img/left_button.jpg") no-repeat;}
 
 
         .m_right{width: 315px;height:546px;background: url("img/m_right.jpg") no-repeat 0;float: right}
