lesson7_运算符、流程控制

--- a/JaveScript_基础/lesson6_作用域、JS预解析机制/6_for中的作用域.html
+++ b/JaveScript_基础/lesson6_作用域、JS预解析机制/6_for中的作用域.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>6_for中的作用域</title>
+    <title>for中的作用域</title>
     <script>
         window.onload = function () {
             var aBtn =document.getElementsByTagName("input");
